--- a/style.css
+++ b/style.css
@@ -13,28 +13,6 @@ body
 	
 }
 
-h1
-{
-	font-family: calibri, verdana, serif;
-	font-size: 6vw;
-	margin: auto;
-	padding: 30px 100px;
-	flex: 2;	
-}
-
-h1 em
-{
-	font-size: 3vw;
-    padding: 10px 20px 10px 15px;
-    border-bottom: 2px rgba(51, 102, 255, 1) solid;
-    
-}
-
-h1 strong
-{
-    color: rgba(51, 102, 255, 1);
-}
-
 
 h2
 {
@@ -54,6 +32,50 @@ h2
     font-family: calibri light, verdana, serif;
 	font-size: 1.2vw;
 }
+
+
+/*HEADER*/
+
+.nomprenom
+{
+  font-family: calibri, verdana;
+  display: flex;
+  padding-top: 5%;
+  
+    
+}
+
+h4
+{
+    
+	font-size: 4vw;
+    margin: 0.5%;
+   
+}
+
+h3
+{
+    
+    font-size: 4vw;
+    margin: 0.5%;
+    color: rgba(51, 102, 255, 1);
+}
+
+
+h1
+{
+	font-family: calibri, verdana, serif;
+	font-size: 4vw;
+    
+}
+
+h1 em
+{
+   font-style: normal;
+   border-bottom: 2px rgba(51, 102, 255, 1) solid; 
+}
+
+
 
 
 /*COLONNE DE GAUCHE*/
@@ -344,17 +366,6 @@ h2
         padding-right: 0px;	
     } 
     
-        h1
-    {
-        padding: 0px;
-        font-size: 10vw;
-        
-    }
-
-        h1 em
-    {
-        font-size: 6vw;
-    }
 
         h2
     {
@@ -362,6 +373,29 @@ h2
 	   margin-left: 5px;	
     }
 
+    
+/*HEADER*/
+    
+
+        h4
+    {
+    
+	   font-size: 10vw;
+   
+    }
+
+        h3
+    {
+    
+        font-size: 10vw;
+    }
+
+
+        h1
+    {
+	   font-size: 8vw;
+    
+    }
 
 /*Colonne de gauche*/
 
