--- a/style.css
+++ b/style.css
@@ -35,48 +35,36 @@ h2
 
 /*HEADER*/
 
-.nomprenom
-{
-    font-family: calibri, verdana;
-    display: flex;
-    padding-top: 5%;
-
-
-}
-
-h4
-{
-
-    font-size: 4vw;
-    margin: 0.5%;
-    text-transform: uppercase;
-
-}
-
-h3
-{
-
-    font-size: 4vw;
-    margin: 0.5%;
-    color: rgba(51, 102, 255, 1);
-    text-transform: uppercase;
-}
-
-
 h1
 {
     font-family: calibri, verdana, serif;
-    font-size: 4vw;
-
+    font-size: 6vw;
+    display: flex;
+    text-transform: uppercase;
+    color: rgba(51, 102, 255, 1);
 }
 
 h1 em
 {
     font-style: normal;
-    border-bottom: 2px rgba(51, 102, 255, 1) solid; 
+    margin-left: 1%;
+    color: black;
 }
 
 
+h3 
+{
+    font-family: calibri, verdana, serif;
+    font-size: 3vw;
+    text-transform: uppercase;
+    
+}
+
+h3 em
+{
+    font-style: normal;
+    border-bottom: 2px rgba(51, 102, 255, 1) solid; 
+}
 
 
 /*COLONNE DE GAUCHE*/
@@ -389,23 +377,16 @@ h1 em
     /*HEADER*/
 
 
-    h4
+    h1
     {
 
         font-size: 10vw;
-
     }
+
 
     h3
     {
-
-        font-size: 10vw;
-    }
-
-
-    h1
-    {
-        font-size: 8vw;
+        font-size: 6vw;
 
     }
 
